# genome

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp
components/colors/: colors.h
components/development/: main.cpp
components/monitoring/: framerate.window.cpp  framerate.window.h
components/plot-var/: plot-var.cpp  plot-var.h
components/style/: style.cpp  style.h
components/task-manager/: task-manager.cpp  task-manager.h
development/: main.cpp  main.h
development/monitoring/: framerate.window.cpp  framerate.window.h  profiler.window.h
production/: main.cpp  main.h
